tooling/nargo_cli/tests/snapshots/execution_success/regression_8761/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main() -> pub Field {
    let mut d: [&mut bool; 1] = [&mut false];
    for _ in 0..1 {}
    if *d[0] {
        0
    } else {
        1
    }
}
